--- a/src/components/CSS/FrontPage.css
+++ b/src/components/CSS/FrontPage.css
@@ -3,8 +3,28 @@
   width: 300px;
   margin-top: 20px;
 }
+
 .card-row {
   display: flex;
   flex-wrap: wrap;
- gap: 30px;
+  gap: 30px;
+}
+
+.favContainer {
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: none;
+}
+
+.favoriteIcon {
+  height: 22px;
+  width: 22px;
+  fill: orange;
 }
