navbar, login and register

--- a/src/components/CSS/App.css
+++ b/src/components/CSS/App.css
@@ -1,3 +1,11 @@
-.page{
-    height: 100vh;
+.page {
+  padding-top: 15vh !important;
+}
+html,
+body {
+  width: 100vw;
+  height: 100vh;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
