--- a/src/components/CSS/RegisterForm.css
+++ b/src/components/CSS/RegisterForm.css
@@ -1,1 +1,98 @@
-@import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
+* {
+  box-sizing: border-box !important;
+}
+#main_containerReg {
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  background-color: #121212;
+  border: 10px solid #03dac6;
+  width: 100vw;
+  height: 100vh;
+  color: white !important;
+}
+#leftSideReg {
+  display: none;
+}
+#rightSideReg {
+  width: 100%;
+  height: 100%;
+  /* border: 2px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#BrandLogoReg {
+  width: 100%;
+  height: 20%;
+  /* border: 2px solid red; */
+  object-fit: contain;
+  padding: 1% !important;
+}
+#BrandLogoReg > img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+/* .register-btn */
+.register-btn {
+  background-color: #03dac6 !important;
+  font-family: "Titan One", cursive !important;
+  color: black;
+  border: 2px solid transparent !important;
+}
+.register-btn:hover {
+  background-color: rgba(255, 255, 255, 0) !important;
+  color: white;
+  transition: 0.3s;
+  cursor: pointer;
+  border: 2px solid #03dac6 !important;
+}
+
+/* login btn */
+.login-instead-btn {
+  background-color: #bb86fc !important;
+  font-family: "Titan One", cursive !important;
+  color: black;
+  border: 2px solid transparent !important;
+}
+.login-instead-btn:hover {
+  background-color: rgba(255, 255, 255, 0) !important;
+  color: white;
+  transition: 0.3s;
+  cursor: pointer;
+  border: 2px solid #03dac6 !important;
+}
+
+label {
+  margin: -10px 0px !important;
+  color: rgb(128, 128, 128);
+}
+
+.inputs-div input,
+.login-instead-btn,
+.register-btn {
+  width: 300px !important;
+}
+
+#regForma {
+  height: auto;
+  /* border: 2px solid lime; */
+}
+
+@media (min-width: 768px) {
+  #leftSideReg {
+    display: block !important;
+    width: 50% !important;
+    height: 100% !important;
+    /* border: 2px solid yellow !important; */
+  }
+  #rightSideReg {
+    width: 50% !important;
+  }
+}
