--- a/src/components/CSS/Footer.css
+++ b/src/components/CSS/Footer.css
@@ -5,6 +5,7 @@
 }
 .footer {
   width: 100%;
+  height: 100%;
   background-color: #121212;
   color: #fff;
   border-top: 10px solid #03dac6;
@@ -44,6 +45,7 @@
   /* border: 2px solid green; */
   display: flex;
   justify-content: center;
+  margin-top: 5px !important;
 }
 .Newsletter_input > input {
   all: unset;
@@ -110,7 +112,7 @@
   color: white;
   text-decoration: none;
   font-size: 0.8rem;
-  margin-top: 3px 0 !important;
+  margin-bottom: -20px !important;
 }
 /* -------------------------------------------- */
 
@@ -130,13 +132,13 @@
   font-size: 1rem;
   width: 100%;
   padding-top: 20px !important;
+  /* border: 2px solid red; */
 }
 .footer_team > div {
   /* border: 2px solid red; */
   margin: 0 5px !important;
   display: flex;
   justify-content: flex-start;
-
   flex-direction: column;
   flex-wrap: wrap;
 }
@@ -147,6 +149,7 @@
   font-size: 0.8rem;
   text-decoration: underline;
   /* border: 2px solid blue; */
+  height: 20px !important;
 }
 
 .footer_team > div > p {
@@ -204,7 +207,8 @@
     height: 2em !important;
   }
   .Newsletter_input > button {
-    font-size: 0.6rem;
+    font-size: 0.3rem;
+    height: 4em !important;
   }
 
   .footer_socials {
@@ -223,10 +227,10 @@
   }
 
   .footer_nav p:nth-child(1) {
-    font-size: 1rem;
+    font-size: rem;
   }
   .footer_nav a {
-    font-size: 0.5rem;
+    font-size: 0.7rem;
   }
 
   .footer_team > p {
