--- a/src/components/CSS/EventCard.css
+++ b/src/components/CSS/EventCard.css
@@ -22,7 +22,7 @@ h5 {
 .image-container img {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: cover;
   transition: transform 0.3s ease;
   cursor: pointer;
 }
